--- a/specs.html
+++ b/specs.html
@@ -44,8 +44,8 @@
 					<hgroup>
 						<h3>Glass > Especificações</h3>
 						<h1>Raio-X no Google Glass</h1>
-						<h2>por Pedro Motta</h2>
-						<h3 class="direita">Atualizado em 17/Novembro/2020</h3>
+						<h2>por Gustavo Guanabara</h2>
+						<h3 class="direita">Atualizado em 01/Maio/2013</h3>
 					</hgroup>
 				</header>
 				<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google
@@ -66,7 +66,7 @@
 		</section>
 
 		<footer id="rodape">
-			<p>Copyright &copy; 2020 - by Pedro Motta <br />
+			<p>Copyright &copy; 2013 - by Gustavo Guanabara <br />
 				<a href="#">Facebook</a> | <a
 				href="#">Twitter</p></a>	
 		</footer>
