--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -49,8 +49,8 @@
                     <hgroup>
                         <h3>Fale Conosco > Contato</h3>
                         <h1>Fórmulário de Contato</h1>
-                        <h2>por Pedro Motta</h2>
-                        <h3 class="direita">Atualizado em 17/Novembro/2020</h3>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
                     </hgroup>
                 </header>
             </article>
@@ -125,7 +125,7 @@
         </form>
 
         <footer id="rodape">
-            <p>Copyright &copy; 2020 - by Pedro Motta <br />
+            <p>Copyright &copy; 2013 - by Gustavo Guanabara <br />
                 <a href="#">Facebook</a> | <a
 				href="#">Twitter</p></a>	
         </footer>
