--- a/fotos.html
+++ b/fotos.html
@@ -42,8 +42,8 @@
 					<hgroup>
 						<h3>Glass > Fotos</h3>
 						<h1>Galeria de Imagens do Google Glass</h1>
-						<h2>por Pedro Motta</h2>
-						<h3 class="direita">Atualizado em 17/Novembro/2020</h3>
+						<h2>por Gustavo Guanabara</h2>
+						<h3 class="direita">Atualizado em 01/Maio/2013</h3>
 					</hgroup>
 				</header>
 
@@ -63,7 +63,7 @@
 				</ul>
 
 				<footer id="rodape">
-					<p>Copyright &copy; 2020 - by Pedro Motta <br />
+					<p>Copyright &copy; 2013 - by Gustavo Guanabara <br />
 						<a href="#">Facebook</a> | <a
 				href="#">Twitter</p></a>	
 				</footer>
