--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<hgroup>
 						<h3>Tecnologia > Inovações</h3>
 						<h1>Saiba tudo sobre o Google Glass</h1>
-						<h2>por Pedro Motta</h2>
-						<h3 class="direita">Atualizado em 12/Novembro/2020</h3>
+						<h2>por Gustavo Guanabara</h2>
+						<h3 class="direita">Atualizado em 23/Abril/2013</h3>
 					</hgroup>
 				</header>
 
@@ -141,7 +141,7 @@
 				colocado a 2,5 metros de distância do espectador.</p>
 		</aside>
 		<footer id="rodape">
-			<p>Copyright &copy; 2020 - by Pedro Motta <br />
+			<p>Copyright &copy; 2013 - by Gustavo Guanabara <br />
 				<a href="#">Facebook</a> | <a
 				href="#">Twitter</p></a>				
 		</footer>
